Fix scrollbar bug

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -2,7 +2,6 @@ html, body {
   margin: 0;
   padding: 0;
   position: relative;
-  overflow-x: hidden;
   max-width: 100vw;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
